trait-xml/tests/fail/no_name.rs
trait_xml::trait_xml! {
    <trait></trait>
}

fn main() {}
